Apenas exibe os cards caso sejam exibidos completamente

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,10 +8,12 @@
     .sidebar {
         position: fixed;
         margin: 0 73px;
-        width: 25%;
+        width: 30%;
         max-width: 370px;
         height: 100vh;
         overflow: hidden;
+        display: flex;
+        flex-direction: column;
     }
 }
 
