--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -2,7 +2,7 @@
     padding: 30px;
     background: #FFFFFF;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
-    margin: 30px 0;
+    margin: 30px 0 0 0;
 }
 
 .subtitle {
