--- a/styles/Skill.module.css
+++ b/styles/Skill.module.css
@@ -2,8 +2,9 @@
     padding: 30px;
     background: #FFFFFF;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
-    margin: 30px 0;
-    
+    margin: 30px 0 0 0;
+    flex: 1;
+
 }
 
 .subtitle {
