--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -3,6 +3,7 @@
     background: #FFFFFF;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
     margin: 30px 0 0 0;
+    break-inside: avoid;
 }
 
 .subtitle {
