--- a/styles/Skill.module.css
+++ b/styles/Skill.module.css
@@ -3,7 +3,8 @@
     background: #FFFFFF;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
     margin: 30px 0 0 0;
-    flex: 1;
+    /* flex: 1; */
+    break-inside: avoid;
 
 }
 
