--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -1,6 +1,6 @@
 .sidebarContact {
     padding: 30px;
-    background: #FFFFFF;
+    background: rgba(255, 255, 255, 0.8);
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
     margin: 30px 0 0 0;
     break-inside: avoid;
