--- a/styles/Skill.module.css
+++ b/styles/Skill.module.css
@@ -1,9 +1,8 @@
 .sidebarSkills {
     padding: 30px;
-    background: #FFFFFF;
+    background: rgba(255, 255, 255, 0.8);
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
     margin: 30px 0 0 0;
-    /* flex: 1; */
     break-inside: avoid;
 
 }
