--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -4,6 +4,19 @@
     background: #656565;
     box-shadow: 0px 4.64865px 4.64865px rgba(0, 0, 0, 0.25);
     position: absolute;
+    display: flex;
+    justify-content: center;
+}
+
+@media (min-width: 1600px) {
+    .navArea {
+        width: 1600px !important;
+    }
+}
+
+.navArea {
+    height: 100%;
+    width: 100%;
     padding-left: calc(min(30%, 370px) + 80px + 73px);
     padding-right: 73px;
     display: flex;
