--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -19,5 +19,17 @@
 }
 
 .contactRow a {
-    margin: 0 5px
+    margin: 0 5px;
+    word-break: break-all;
+}
+
+@media (max-width: 1023px) {
+    
+}
+
+@media (max-width: 423px) {
+    .sidebarContact {
+        padding: 20px;
+        width: 100%;
+    }
 }
