--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,6 +1,6 @@
-@media (max-width: 1023px) {
-    .sidebar {
-        display: none;
+@media (min-width: 1600px) {
+    .container {
+        width: 1600px !important;
     }
 }
 
@@ -14,11 +14,35 @@
         column-width: 370px;
         height: 100vh;
     }
+
+    .main {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding-top: 73px;
+        margin-left: calc(min(30%, 370px) + 80px + 73px);
+        margin-right: 73px;
+    }
 }
 
-@media (min-width: 1600px) {
-    .container {
-        width: 1600px !important;
+@media (max-width: 1023px) {
+    .sidebar {
+        margin: 37px 37px;
+    }
+
+    .main {
+        margin: 0 20px;
+    }
+}
+
+@media (max-width: 424px) {
+    .sidebar {
+        margin: 14px 14px;
+    }
+    
+    .main {
+        margin: 0 14px;
     }
 }
 
@@ -26,20 +50,11 @@
     display: flex;
     justify-content: center;
     background: #E8E9EA;
+    width: 100vw;
 }
 
 .container {
     min-height: 100vh;
-    padding: 0 0.5rem;
     width: 100%;
-}
-
-.main {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding-top: 73px;
-    margin-left: calc(min(30%, 370px) + 80px + 73px);
-    margin-right: 73px;
+    padding-bottom: 37px;
 }
