--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -1,11 +1,17 @@
-.navbar {
-    height: 70px;
-    width: 100%;
-    background: #656565;
-    box-shadow: 0px 4.64865px 4.64865px rgba(0, 0, 0, 0.25);
-    position: absolute;
-    display: flex;
-    justify-content: center;
+@media (min-width: 1024px){
+    .navbarMobile {
+        display: none;
+    }
+
+    .navbarDesktop {
+        height: 70px;
+        width: 100%;
+        background: #656565;
+        box-shadow: 0px 4.64865px 4.64865px rgba(0, 0, 0, 0.25);
+        position: absolute;
+        display: flex;
+        justify-content: center;
+    }
 }
 
 @media (min-width: 1600px) {
@@ -49,4 +55,69 @@
     cursor: pointer;
     font-weight: bold;
     outline: none;
+}
+
+hr.Mobile {
+    width: 80%;
+    border: 3px solid #656565;
+    border-radius: 5px;
+    margin-bottom: 30px;
+}
+
+hr.Desktop {
+    display: none
+}
+
+@media (max-width: 1023px) {
+    .navbarDesktop {
+        display: none;
+    }
+
+    .navbarMobile {
+        height: 70px;
+        width: 100%;
+        display: flex;
+        padding: 0 37px;
+        justify-content: center;
+    }
+
+    .navArea {
+        height: 100%;
+        width: 100%;
+        padding: 0 !important;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .navItem,
+    .navItemActive {
+        min-width: fit-content;
+        width: 30%;
+        height: 100%;
+        background: none;
+        border: none;
+        cursor: pointer;
+        color: #656565 !important;
+        font-size: 24px !important;
+        background: #ddd !important;
+        border-radius: 5px;
+    }
+
+    .navItem:hover,
+    .navItemActive {
+        height: 100%;
+        background: none;
+        border-bottom: 7px solid #656565 !important;
+        cursor: pointer;
+        font-weight: bold;
+        outline: none;
+    }
+}
+
+@media (max-width: 423px) {
+    .navbarMobile {
+        padding: 0 15px;
+        
+    }
 }
