--- a/styles/Skill.module.css
+++ b/styles/Skill.module.css
@@ -12,3 +12,12 @@
     width: 100%;
     font-size: 1.5rem;
 }
+
+@media (max-width: 1023px) {}
+
+@media (max-width: 423px) {
+    .sidebarSkills {
+        padding: 20px;
+        width: 100%;
+    }
+}
